--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1307,7 +1307,7 @@ body.beta-body button{width:auto;}
 }
 .beta-product-card__title{
   font-size:13px;
-  font-weight:800;
+  font-weight:nomal;
   color:#737373;
 }
 
@@ -1991,6 +1991,7 @@ body.ontu-stats-page .stats-panel--loan .stats-card:first-child .stats-card__num
   .beta-subinfo__left,
   .beta-subinfo__right{flex:0 0 auto;}
 }
+
 
 
 
